--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watchify": "watchify -vd -p browserify-hmr -e src/main.js -o dist/build.js",
     "serve": "node server.js",
     "dev": "npm-run-all --parallel watchify serve",
-    "build": "cross-env NODE_ENV=production browserify -g envify src/main.js | uglifyjs -c warnings=false -m > dist/build.js"
+    "build": "cross-env NODE_ENV=production browserify -g envify src/main.js | uglifyjs -c warnings=false -m > dist/build.js",
+    "start": "npm-run-all build serve"
   },
   "dependencies": {
     "babel-core": "^6.0.0",
@@ -32,5 +33,8 @@
       "vueify",
       "babelify"
     ]
+  },
+  "engines": {
+    "node": "7.x.x"
   }
 }
