--- a/package.json
+++ b/package.json
@@ -1,40 +1,32 @@
 {
   "name": "pokeviewer",
   "description": "Simple Pokemon viewer",
+  "version": "1.0.0",
   "author": "Andy Barron <AndrewLBarron@gmail.com>",
   "private": true,
   "scripts": {
-    "watchify": "watchify -vd -p browserify-hmr -e src/main.js -o dist/build.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "serve": "node server.js",
-    "dev": "npm-run-all --parallel watchify serve",
-    "build": "cross-env NODE_ENV=production browserify -g envify src/main.js | uglifyjs -c warnings=false -m > dist/build.js",
     "start": "npm-run-all build serve"
   },
   "dependencies": {
     "axios": "^0.15.3",
     "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
-    "babelify": "^7.2.0",
-    "browserify": "^13.0.1",
-    "browserify-hmr": "^0.3.1",
     "chroma-js": "^1.2.1",
-    "cross-env": "^1.0.6",
-    "envify": "^3.4.1",
+    "core-js": "^2.4.1",
+    "cross-env": "^3.0.0",
+    "css-loader": "^0.25.0",
     "express": "^4.14.0",
-    "npm-run-all": "^2.1.2",
-    "uglify-js": "^2.5.0",
-    "vue": "^2.0.1",
-    "vue-router": "^2.1.0",
-    "vueify": "^9.1.0",
-    "watchify": "^3.4.0"
-  },
-  "browserify": {
-    "transform": [
-      "vueify",
-      "babelify"
-    ]
-  },
-  "engines": {
-    "node": "7.x.x"
+    "file-loader": "^0.9.0",
+    "npm-run-all": "^3.1.2",
+    "vue": "^2.1.0",
+    "vue-loader": "^10.0.0",
+    "vue-router": "^2.1.1",
+    "vue-template-compiler": "^2.1.0",
+    "webpack": "^2.1.0-beta.25",
+    "webpack-dev-server": "^2.1.0-beta.0"
   }
 }
