--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "npm-run-all": "^3.1.2",
     "vue": "^2.1.0",
