--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "core-js": "^2.4.1",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
+    "eslint": "^3.11.1",
+    "eslint-config-vue": "^2.0.1",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-vue": "^1.0.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
