--- a/package.json
+++ b/package.json
@@ -5,33 +5,37 @@
   "author": "Andy Barron <AndrewLBarron@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot --content-base dist/",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "build-dev": "cross-env NODE_ENV=development webpack --progress --hide-modules",
     "serve": "node server.js",
     "start": "npm-run-all build serve"
   },
   "dependencies": {
-    "axios": "^0.15.3",
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "chroma-js": "^1.2.1",
-    "core-js": "^2.4.1",
-    "cross-env": "^3.0.0",
-    "css-loader": "^0.25.0",
-    "eslint": "^3.11.1",
-    "eslint-config-vue": "^2.0.1",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-vue": "^1.0.0",
-    "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "file-loader": "^0.9.0",
-    "npm-run-all": "^3.1.2",
-    "vue": "^2.1.0",
-    "vue-loader": "^10.0.0",
-    "vue-router": "^2.1.1",
-    "vue-template-compiler": "^2.1.0",
-    "webpack": "^2.1.0-beta.25",
-    "webpack-dev-server": "^2.1.0-beta.0"
+    "axios": "0.15.3",
+    "babel-core": "6.18.2",
+    "babel-loader": "6.2.8",
+    "babel-preset-es2015": "6.18.0",
+    "chroma-js": "1.2.1",
+    "clean-webpack-plugin": "0.1.14",
+    "copy-webpack-plugin": "^4.0.1",
+    "core-js": "2.4.1",
+    "cross-env": "3.1.3",
+    "css-loader": "0.26.1",
+    "eslint": "3.11.1",
+    "eslint-config-vue": "2.0.1",
+    "eslint-loader": "1.6.1",
+    "eslint-plugin-vue": "1.0.0",
+    "express": "4.14.0",
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "file-loader": "0.9.0",
+    "html-webpack-plugin": "2.24.1",
+    "npm-run-all": "3.1.2",
+    "vue": "2.1.4",
+    "vue-loader": "10.0.2",
+    "vue-router": "2.1.1",
+    "vue-template-compiler": "2.1.4",
+    "webpack": "2.1.0-beta.27",
+    "webpack-dev-server": "2.1.0-beta.12"
   }
 }
