--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "extract-text-webpack-plugin": "2.0.0-beta.4",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.24.1",
+    "node-sass": "^3.13.0",
     "npm-run-all": "3.1.2",
+    "sass-loader": "^4.0.2",
     "vue": "2.1.4",
     "vue-loader": "10.0.2",
     "vue-router": "2.1.1",
