--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-vue": "1.0.0",
     "express": "4.14.0",
     "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "favicons-webpack-plugin": "0.0.7",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.24.1",
     "node-sass": "^3.13.0",
