--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
   },
   "dependencies": {
     "axios": "0.15.3",
-    "babel-core": "6.18.2",
-    "babel-loader": "6.2.8",
+    "babel-core": "6.20.0",
+    "babel-loader": "6.2.10",
     "babel-preset-es2015": "6.18.0",
     "chroma-js": "1.2.1",
     "clean-webpack-plugin": "0.1.14",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "4.0.1",
     "core-js": "2.4.1",
     "cross-env": "3.1.3",
     "css-loader": "0.26.1",
-    "eslint": "3.11.1",
+    "eslint": "3.12.2",
     "eslint-config-vue": "2.0.1",
     "eslint-loader": "1.6.1",
     "eslint-plugin-vue": "1.0.0",
@@ -31,13 +31,14 @@
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.24.1",
-    "node-sass": "^3.13.0",
+    "lazy": "1.0.11",
+    "node-sass": "4.0.0",
     "npm-run-all": "3.1.2",
-    "sass-loader": "^4.0.2",
-    "vue": "2.1.4",
+    "sass-loader": "4.1.0",
+    "vue": "2.1.6",
     "vue-loader": "10.0.2",
     "vue-router": "2.1.1",
-    "vue-template-compiler": "2.1.4",
+    "vue-template-compiler": "2.1.6",
     "webpack": "2.1.0-beta.27",
     "webpack-dev-server": "2.1.0-beta.12"
   }
