--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.24.1",
-    "lazy": "1.0.11",
+    "lazy.js": "0.4.2",
     "node-sass": "4.0.0",
     "npm-run-all": "3.1.2",
     "sass-loader": "4.1.0",
