--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "dependencies": {
     "axios": "0.15.3",
     "babel-core": "6.20.0",
+    "babel-eslint": "7.1.1",
     "babel-loader": "6.2.10",
+    "babel-plugin-syntax-async-functions": "6.13.0",
+    "babel-plugin-transform-regenerator": "6.20.0",
+    "babel-polyfill": "6.20.0",
     "babel-preset-es2015": "6.18.0",
     "chroma-js": "1.2.1",
     "clean-webpack-plugin": "0.1.14",
     "copy-webpack-plugin": "4.0.1",
-    "core-js": "2.4.1",
     "cross-env": "3.1.3",
     "css-loader": "0.26.1",
     "eslint": "3.12.2",
